--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "md5": "^2.2.1",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-bootstrap-v4": "0.0.8",
     "react-dom": "^16.7.0",
